# decentri-license

./: .env  .gitignore copy  BUILD_CONFIG_GUIDE.md  LICENSE  README copy.md  README.md  SDK_TESTING_GUIDE.md
dl-core/: CMakeLists.txt  README.md
dl-core/include/: simple_token.h
dl-core/include/decentrilicense/: crypto_utils.hpp  root_key.hpp
dl-core/src/: crypto_utils.cpp  decenlicense_c.cpp  decentrilicense_client.cpp  device_key_manager.cpp  election_manager.cpp  environment_checker.cpp  network_manager.cpp  state_chain_storage.cpp  token_manager.cpp
scripts/: build_all.sh  build_all_packages.sh  build_c.sh  build_core.sh  build_cpp_sdk.sh  build_csharp.sh  build_csharp_package.sh  build_go.sh  build_go_package.sh  build_go_sdk.sh  build_java.sh  build_java_package.sh  build_nodejs.sh  build_nodejs_package.sh  build_php.sh  build_python.sh  build_python_package.sh  build_rust.sh  build_rust_package.sh  build_sdk_direct.sh  package_release.sh
sdks/: README.md  token_test_ED-2026-005-PEIZAU_20260115183609.json  token_test_RSA-2026-021-9TDX9J_20260115183554.json
sdks/c/: CMakeLists.txt  build_config.sh  decenlicense_c.cpp  token_activated_RSA-2026-021-9TDX9J_20260120152815.txt  token_state_RSA-2026-021-9TDX9J_idx1_20260120152853.txt  validation_wizard  validation_wizard.c  validation_wizard.c.old
sdks/c/.decentrilicense_state/RSA-2026-021-9TDX9J/: chain_meta.json  current_state.json  device_private_key.pem  device_public_key.pem
sdks/c/cmd/: test_runner.c
sdks/c/example/: simple_validation_wizard.c  validation_wizard.c
sdks/c/include/: decenlicense_c.h
sdks/cpp/: CMakeLists.txt
sdks/cpp/example/: CMakeLists.txt  enhanced_token.json  enhanced_validator.cpp  run_wizard.sh  simple_validation_wizard.cpp  token_activated_ED-2026-005-PEIZAU_20260120165317.txt  token_state_ED-2026-005-PEIZAU_idx1_20260120165351.txt  validation_wizard  validation_wizard.cpp  validation_wizard.cpp.old
sdks/cpp/example/.decentrilicense_state/ED-2026-005-PEIZAU/: chain_meta.json  current_state.json  device_private_key.pem  device_public_key.pem
sdks/cpp/example/.decentrilicense_state/RSA-2026-021-9TDX9J/: chain_meta.json
sdks/cpp/include/: decenlicense_c.h  state_chain_storage.h
sdks/cpp/include/decentrilicense/: decentrilicense_client.hpp  device_key_manager.hpp  election_manager.hpp  environment_checker.hpp  network_manager.hpp  token_manager.hpp
sdks/csharp/: DecenLicense.csproj  build.sh  build_config.sh
sdks/csharp/DecentriLicense/: DecentriLicenseClient.cs  LicenseException.cs  NativeMethods.cs  Results.cs  Structs.cs  ValidationWizard.cs
sdks/csharp/Example/: Example.csproj
sdks/csharp/Tests/: ClientApiShapeTests.cs  DecenLicense.Tests.csproj
sdks/go/: GORUN_FIXED.md  GORUN_QUICKSTART.md  README.md  build_config.sh  decenlicense  decenlicense.go  go.mod  inject_dylib_path.sh  public_test_20260115182016.pem  run_validation_wizard.sh  setup_go_env.sh  wizard
sdks/go/crypto/: utils.go
sdks/go/example/: decentrilicense_example
sdks/go/validation_wizard/: DYNAMIC_LIB_GUIDE.md  README.md  TOKEN_USAGE_GUIDE.md  VALIDATION_FEATURES.md  build.sh  gorun.sh  run.sh  run_full_test.sh  test_complete_flow.sh  test_device_keys.sh  test_idempotent_activation.sh  token_activated_ED-2026-005-PEIZAU_20260116012948.txt  token_activated_ED-2026-005-PEIZAU_20260116092430.txt  token_activated_RSA-2026-021-9TDX9J_20260116012953.txt  token_activated_RSA-2026-021-9TDX9J_20260116013129.txt  token_state_ED-2026-005-PEIZAU_idx1_20260116092627.txt  token_state_RSA-2026-021-9TDX9J_idx1_20260116013238.txt  token_state_RSA-2026-021-9TDX9J_idx2_20260116013302.txt  validation_wizard  validation_wizard.go
sdks/java/: README.md  build.sh  build_config.sh  mvn.sh  mvn_run.sh  pom.xml  pom.xml.new  run_validation_wizard.sh  token_activated_RSA-2026-021-9TDX9J_20260121102319.txt  token_state_RSA-2026-021-9TDX9J_idx1_20260121104635.txt  token_state_RSA-2026-021-9TDX9J_idx1_20260121104742.txt  token_state_RSA-2026-021-9TDX9J_idx1_20260121104929.txt
sdks/java/src/main/cpp/: CMakeLists.txt  decenlicense_jni.cpp
sdks/java/tests/: ApiImportSmokeTest.java
sdks/javascript/: build_config.sh
sdks/nodejs/: README.md  binding.gyp  comprehensive_validator.js  decentrilicense-decenlicense-1.0.0.tgz  example.js  index.js  install.sh  package-lock.json  package.json  test.js  token_activated_ED-2026-005-PEIZAU_20260120085133.txt  token_state_ED-2026-005-PEIZAU_idx1_20260120085207.txt  validation_wizard.js
sdks/nodejs/example/: validation_wizard.js
sdks/nodejs/src/: decenlicense_node.cpp
sdks/php/: README.md  build_config.sh  decentrilicense.php  example.php  validation_wizard.php
sdks/php/cmd/: test_runner.php
sdks/php/example/: validation_wizard.php
sdks/php/examples/: simple_validation_wizard.php
sdks/php/tests/: test_api_import.php
sdks/python/: README.md  build_config.sh  comprehensive_validator.py  example.py  install.sh  public_dev_20260114115517.pem  setup.py  test_wizard.py  token_activated_RSA-2026-021-9TDX9J_20260121001447.txt  token_activated_test_RSA-2026-020-8WFMPF.txt  token_dev_RSA-2026-020-8WFMPF_20260114115550_encrypted.txt  token_state_RSA-2026-020-8WFMPF_test_20260114204118.txt  validation_wizard.py
sdks/python/cmd/: test_runner.py  test_runner_capi.py  test_runner_debug.py
sdks/python/decenlicense/: __init__.py  _decenlicense.py  (+1 more)
sdks/python/decenlicense.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdks/rust/: Cargo.toml  README.md  build.rs  build_config.sh  install.sh  token_activated_ED-2026-005-PEIZAU_20260120102903.txt  token_state_ED-2026-005-PEIZAU_idx1_20260120102947.txt  token_test_ED-2026-005-PEIZAU_20260115183609_encrypted.txt  token_test_RSA-2026-021-9TDX9J_20260115183554_encrypted.txt  wrapper.h
sdks/rust/.decentrilicense_state/ED-2026-005-PEIZAU/: chain_meta.json  current_state.json  device_private_key.pem  device_public_key.pem  genesis_token.json
sdks/rust/examples/: comprehensive_validator.rs  example.rs  simple_validation_wizard.rs  validation_wizard.rs
sdks/rust/src/: lib.rs
server/: README.md  go.mod
server/cmd/: main.go
(+53 files in other folders)
