[package]
name = "decenlicense"
version = "1.0.0"
edition = "2021"
authors = ["Linlurui"]
description = "DecentriLicense Rust Binding"
license = "MIT"
repository = "https://github.com/decentrilicense/decentri-license"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[build-dependencies]
bindgen = "0.69"

[lib]
name = "decenlicense"
crate-type = ["rlib", "cdylib"]
